--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -223,6 +223,7 @@
   }
   .footer-v6__menus-wrapper {
     display: flex;
+    padding-top: 30px;
     justify-content: space-between;
     gap: 40px;
   }
